Bug: ajustando função remove

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span @click="like(item.nome)"class="like material-symbols-outlined">
                     favorite
                 </span>
-                <span @click="like(item.nome)"class="delete material-symbols-outlined">
+                <span @click="remove(item.id)"class="delete material-symbols-outlined">
                     delete
                 </span>
                
